# Astronomodel

./: pyproject.toml
astronomodel/src/Data Utils/: annot_cleanup.py  pp_images.py  scraper.py
astronomodel/src/model/: model.ipynb
