[tool.poetry]
name = "astronomodel"
version = "0.1.0"
description = ""
authors = ["Aaron <sapblatt11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.3.0"
bs4 = "^0.0.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
